--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
         "drupal/better_exposed_filters": "^7.0",
+        "drupal/config_ignore": "^3.3",
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
