--- a/web/themes/custom/itkdev/itkdev_base_theme/package.json
+++ b/web/themes/custom/itkdev/itkdev_base_theme/package.json
@@ -14,6 +14,7 @@
     "@symfony/webpack-encore": "^4.6.1",
     "@tailwindcss/forms": "^0.5.7",
     "babel-loader": "^9.1.3",
+    "choices.js": "^11.0.2",
     "concurrently": "^9.0.1",
     "eslint": "^9.3.0",
     "eslint-config-standard": "^17.1.0",
