--- a/config/sync/core.entity_form_display.taxonomy_term.project_track_type.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.project_track_type.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.project_track_type.field_configuration
     - field.field.taxonomy_term.project_track_type.field_webform
     - taxonomy.vocabulary.project_track_type
   module:
@@ -19,10 +20,20 @@ content:
     settings:
       rows: 5
       placeholder: ''
+      hide_help: false
+      hide_guidelines: false
+    third_party_settings: {  }
+  field_configuration:
+    type: string_textarea
+    weight: 2
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
     third_party_settings: {  }
   field_webform:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
