--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.project.field_department
     - field.field.node.project.field_description
+    - field.field.node.project.field_project_state
     - node.type.project
   module:
     - field_group
@@ -28,6 +29,21 @@ third_party_settings:
         label_as_html: false
         description: ''
         required_fields: true
+    group_state:
+      children:
+        - field_project_state
+      label: State
+      region: content
+      parent_name: ''
+      weight: 1
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        description: ''
+        required_fields: false
 id: node.project.default
 targetEntityType: node
 bundle: project
@@ -48,6 +64,12 @@ content:
       placeholder: ''
       hide_help: true
       hide_guidelines: true
+    third_party_settings: {  }
+  field_project_state:
+    type: options_select
+    weight: 8
+    region: content
+    settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
