--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - field.field.node.project.field_department
     - field.field.node.project.field_description
+    - field.field.node.project.field_project_state
     - node.type.project
   module:
+    - options
     - text
     - user
 id: node.project.default
@@ -28,6 +30,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_project_state:
+    type: list_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   langcode: true
