--- a/config/sync/core.entity_view_display.node.project.teaser.yml
+++ b/config/sync/core.entity_view_display.node.project.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.project.field_department
     - field.field.node.project.field_description
+    - field.field.node.project.field_project_state
     - node.type.project
   module:
     - user
@@ -22,4 +23,5 @@ content:
 hidden:
   field_department: true
   field_description: true
+  field_project_state: true
   langcode: true
