--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_department
     - field.storage.node.field_description
-    - field.storage.user.field_name
+    - field.storage.node.field_project_state
     - node.type.project
     - system.menu.main
     - taxonomy.vocabulary.department
@@ -13,6 +13,7 @@ dependencies:
     - better_exposed_filters
     - group
     - node
+    - options
     - taxonomy
     - text
     - user
@@ -225,6 +226,68 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_project_state:
+          id: field_project_state
+          table: node__field_project_state
+          field: field_project_state
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: State
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         nothing:
           id: nothing
           table: views
@@ -337,13 +400,15 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-        field_name:
-          id: field_name
-          table: user__field_name
-          field: field_name
+        name:
+          id: name
+          table: users_field_data
+          field: name
           relationship: uid
           group_type: group
           admin_label: ''
+          entity_type: user
+          entity_field: name
           plugin_id: field
           label: 'Project owner'
           exclude: false
@@ -387,7 +452,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: string
+          type: user_name
           settings:
             link_to_entity: true
           group_column: value
@@ -570,7 +635,7 @@ display:
           fields:
             field_description: field_description
             title: title
-            field_name: field_name
+            name: name
         field_department_target_id:
           id: field_department_target_id
           table: node__field_department
@@ -665,6 +730,50 @@ display:
                 title: Mine
                 operator: '='
                 value: '1'
+        field_project_state_value:
+          id: field_project_state_value
+          table: node__field_project_state
+          field: field_project_state_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: list_field
+          operator: or
+          value:
+            all: all
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_project_state_value_op
+            label: State
+            description: ''
+            use_operator: false
+            operator: field_project_state_value_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: field_project_state_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              editor: '0'
+              administrator: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
       filter_groups:
         operator: AND
         groups:
@@ -818,7 +927,7 @@ display:
       tags:
         - 'config:field.storage.node.field_department'
         - 'config:field.storage.node.field_description'
-        - 'config:field.storage.user.field_name'
+        - 'config:field.storage.node.field_project_state'
   page_1:
     id: page_1
     display_title: Page
@@ -849,4 +958,4 @@ display:
       tags:
         - 'config:field.storage.node.field_department'
         - 'config:field.storage.node.field_description'
-        - 'config:field.storage.user.field_name'
+        - 'config:field.storage.node.field_project_state'
