--- a/web/themes/custom/itkdev/itkdev_base_theme/package.json
+++ b/web/themes/custom/itkdev/itkdev_base_theme/package.json
@@ -2,7 +2,6 @@
   "license": "UNLICENSED",
   "private": true,
   "devDependencies": {
-    "alpinejs": "^3.14.3",
     "@alpinejs/persist": "^3.14.3",
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
@@ -13,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@symfony/webpack-encore": "^4.6.1",
     "@tailwindcss/forms": "^0.5.7",
+    "alpinejs": "^3.14.3",
     "babel-loader": "^9.1.3",
     "choices.js": "^11.0.2",
     "concurrently": "^9.0.1",
@@ -40,5 +40,8 @@
     "watch:encore": "yarn encore dev --watch",
     "watch:tailwind": "yarn tailwindcss -i css/styles.css -o css/styles.dist.css --watch",
     "watch": "concurrently \"yarn watch:tailwind\" \"yarn watch:encore\" "
+  },
+  "dependencies": {
+    "chart.js": "^4.4.6"
   }
 }
