--- a/web/themes/custom/itkdev/itkdev_base_theme/package.json
+++ b/web/themes/custom/itkdev/itkdev_base_theme/package.json
@@ -14,7 +14,6 @@
     "@tailwindcss/forms": "^0.5.7",
     "alpinejs": "^3.14.3",
     "babel-loader": "^9.1.3",
-    "choices.js": "^11.0.2",
     "concurrently": "^9.0.1",
     "eslint": "^9.3.0",
     "eslint-config-standard": "^17.1.0",
@@ -41,7 +40,5 @@
     "watch:tailwind": "yarn tailwindcss -i css/styles.css -o css/styles.dist.css --watch",
     "watch": "concurrently \"yarn watch:tailwind\" \"yarn watch:encore\" "
   },
-  "dependencies": {
-    "chart.js": "^4.4.6"
-  }
+  "dependencies": {}
 }
