--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -179,6 +179,7 @@ jobs:
       - name: Build theme
         run: |
           docker network create frontend
+          docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
