--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -100,6 +100,7 @@ tasks:
   theme-build:
     desc: "Build theme"
     cmds:
+      - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
       - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
       - task compose -- run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
