--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -4,6 +4,7 @@ module:
   ai_screening: 0
   ai_screening_project: 0
   ai_screening_project_track: 0
+  ai_screening_reports: 0
   better_exposed_filters: 0
   block: 0
   breakpoint: 0
