--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Build theme
         run: |
+          docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_project_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme install
           docker compose run --rm node yarn --cwd /app/web/themes/custom/itkdev/itkdev_base_theme build
 
